# infinitam_cs534

./: .gitignore  CMakeLists.txt  plugin.cpp  plugin.hpp
Apps/InfiniTAM_cli/: CLIEngine.cpp  CMakeLists.txt
ITMLib/: ITMLibDefines.h
ITMLib/Core/: ITMBasicEngine.h  ITMBasicEngine.tpp  ITMBasicSurfelEngine.h  ITMDenseMapper.h  ITMMainEngine.h  ITMMultiEngine.h
ITMLib/Engines/Meshing/CPU/: ITMMeshingEngine_CPU.h  ITMMeshingEngine_CPU.tpp
ITMLib/Engines/Meshing/CUDA/: ITMMeshingEngine_CUDA.h  ITMMeshingEngine_CUDA.tcu
ITMLib/Engines/Meshing/Interface/: ITMMeshingEngine.h
ITMLib/Engines/Meshing/Shared/: ITMMeshingEngine_Shared.h
ITMLib/Engines/Reconstruction/CPU/: ITMSceneReconstructionEngine_CPU.tpp
ITMLib/Engines/Reconstruction/CUDA/: ITMSceneReconstructionEngine_CUDA.h  ITMSceneReconstructionEngine_CUDA.tcu
ITMLib/Engines/Reconstruction/Interface/: ITMSceneReconstructionEngine.h
ITMLib/Engines/ViewBuilding/CPU/: ITMViewBuilder_CPU.cpp
ITMLib/Engines/ViewBuilding/CUDA/: ITMViewBuilder_CUDA.cu
ITMLib/Objects/Meshing/: ITMMesh.h
ITMLib/Objects/Scene/: ITMGlobalCache.h  ITMVoxelBlockHash.h
ITMLib/Utils/: ITMLibSettings.cpp  ITMLibSettings.h
ORUtils/: MemoryBlock.h  PIDController.h
cmake/: LinkFFmpeg.cmake  UseFFmpeg.cmake
